Make sure to rebuild prop tree state in blend mode change.

This patch ensures that if we've changed mix-blend-mode property, then
we call SetNeedsPropertyTreeUpdate.

R=pdr@chromium.org

Bug: 867403
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Idcd6e54c1d6ca3db0d0e088038cc144def2789b8
Reviewed-on: https://chromium-review.googlesource.com/1150687
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578133}
Former-commit-id: ec6c21fbfe8bcf7824984b5076ec1d8b95188102