third_party/blink/renderer/core/style/style_difference.h
@@ -27,6 +27,7 @@ class StyleDifference {
     // The object needs to issue paint invalidations if it is affected by text
     // decorations or properties dependent on color (e.g., border or outline).
     kTextDecorationOrColorChanged = 1 << 6,
+    kBlendModeChanged = 1 << 7,
     // If you add a value here, be sure to update kPropertyDifferenceCount.
   };
 
@@ -132,6 +133,13 @@ class StyleDifference {
     property_specific_differences_ |= kCSSClipChanged;
   }
 
+  bool BlendModeChanged() const {
+    return property_specific_differences_ & kBlendModeChanged;
+  }
+  void SetBlendModeChanged() {
+    property_specific_differences_ |= kBlendModeChanged;
+  }
+
   bool TextDecorationOrColorChanged() const {
     return property_specific_differences_ & kTextDecorationOrColorChanged;
   }
@@ -149,7 +157,7 @@ class StyleDifference {
   void SetCompositingReasonsChanged() { composited_reasons_changed_ = true; }
 
  private:
-  static constexpr int kPropertyDifferenceCount = 7;
+  static constexpr int kPropertyDifferenceCount = 8;
 
   friend CORE_EXPORT std::ostream& operator<<(std::ostream&,
                                               const StyleDifference&);
